--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,6 @@
   "showLineNumber": true,
   "autoPairBrackets": false,
   "autoPairMarkdown": false,
-  "autoConvertHtml": true
+  "autoConvertHtml": true,
+  "alwaysUpdateLinks": true
 }
